# zeroclaw

./: install.sh
crates/zeroclaw-channels/src/: telegram.rs
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-config/src/: lib.rs
crates/zeroclaw-config/src/runtime/: docker.rs  native.rs
src/: main.rs
src/config/: schema.rs
src/cost/: types.rs
src/runtime/: docker.rs  mod.rs  native.rs
src/tools/: mod.rs
